--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.storage.drive</groupId>
-	<artifactId>storage-drive</artifactId>
+	<groupId>com.vault</groupId>
+	<artifactId>vault</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>storage-drive</name>
+	<name>vault</name>
 	<description>Spring project to store files</description>
 	<properties>
 		<java.version>11</java.version>
